Changing workflow trigger to release

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,9 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches:
-      - main
-    tags: 
-      - v*
+  release:
+    types:
+      - created
 jobs:
   build:
     runs-on: ubuntu-latest
